photo-validator/micro-service-engine/kubernetes/visionaid-photo-validator.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: visionaid-photo-validator-stateful
  labels:
    app: visionaid-photo-validator
spec:
  serviceName: visionaid-photo-validator
  replicas: 1
  selector:
    matchLabels:
      app: visionaid-photo-validator
  template:
    metadata:
      labels:
        app: visionaid-photo-validator
    spec:
      containers:
      - name: visionaid-photo-validator
        image: ghcr.io/csia-pme/csia-pme-visionaid-photo-validator:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
