photo-validator/micro-service-engine/kubernetes/visionaid-photo-validator.service.yml
apiVersion: v1
kind: Service
metadata:
  name: visionaid-photo-validator-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8007
      targetPort: 80
      protocol: TCP
  selector:
    app: visionaid-photo-validator
