photo-validator/micro-service-engine/kubernetes/visionaid-photo-validator.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visionaid-photo-validator-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: visionaid-photo-validator-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visionaid-photo-validator-service
            port:
              number: 80
  tls:
    - hosts:
        - visionaid-photo-validator-csia-pme.kube.isc.heia-fr.ch
